syntax = "proto3";
package vector;

import "event.proto";

message EventRequest {
  event.EventWrapper message = 1;
}

message EventAck {
  string message = 1;
}

enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  ServingStatus status = 1;
}

service Vector {
  rpc PushEvents(EventRequest) returns (EventAck) {}

  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}
